--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
 
     <main>
-        <section class="px-4 py-5 my-5 text-center vh-100 d-flex justify-content-center align-items-center flex-column">
+        <section class="px-md-4 py-2 py-md-5 my-5 text-center vh-100 d-flex justify-content-center align-items-center flex-column">
             <img src="/assets/images/hero.png" class="img-fluid" alt="logo" style="width: 40vw;">
             <p class="lead mt-4 text-decoration-underline">Welcome, let's make things your own ways</p>
         </section>
 
 
-        <section id="about" class="py-5">
+        <section id="about" class="py-2 py-md-5">
             <div class="container">
                 <h2 class="pb-2 text-center">About Us</h2>
                 <hr class="border-white mb-5">
 
 
-                <div class="row g-4 py-5">
+                <div class="row g-4 py-2 py-md-5">
                     <div class="col-md-6">
                         <img src="assets/images/about-1.png" height="400" alt="" class="img-fluid">
                     </div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="row g-4 py-5 flex-md-row flex-sm-column-reverse">
+                <div class="row g-4 py-2 py-md-5 flex-md-row flex-column-reverse">
                     <div class="col-md-6">
                         <div class="h-100 d-flex flex-column justify-content-center">
                             <h3 class="fs-4">Our Vision</h3>
@@ -76,7 +76,7 @@
                 </div>
 
 
-                <div class="row g-4 py-5">
+                <div class="row g-4 py-2 py-md-5">
                     <div class="col-md-6">
                         <img src="assets/images/about-3.png" height="400" alt="" class="img-fluid">
                     </div>
@@ -91,11 +91,11 @@
         </section>
 
 
-        <section class="py-5" id="services">
+        <section class="py-2 py-md-5" id="services">
             <div class="container">
                 <h2 class="pb-2 text-center">Our Services</h2>
                 <hr class="border-white mb-5">
-                <div class="row g-4 py-sm-0 py-5 row-cols-1 row-cols-lg-3">
+                <div class="row g-4 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                             <i class="fas fa-robot"></i>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
 
-                <div class="row g-4 py-sm-0 py-5 row-cols-1 row-cols-lg-3">
+                <div class="row g-4 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                             <i class="fas fa-cloud"></i>
