Adjust spacing on mobile screen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id="about" class="py-2 py-md-5">
             <div class="container">
                 <h2 class="pb-2 text-center">About Us</h2>
-                <hr class="border-white mb-5">
+                <hr class="border-white">
 
 
                 <div class="row g-4 py-2 py-md-5">
@@ -94,8 +94,8 @@
         <section class="py-2 py-md-5" id="services">
             <div class="container">
                 <h2 class="pb-2 text-center">Our Services</h2>
-                <hr class="border-white mb-5">
-                <div class="row g-4 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
+                <hr class="border-white">
+                <div class="row g-sm-4 g-2 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                             <i class="fas fa-robot"></i>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
 
-                <div class="row g-4 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
+                <div class="row g-sm-4 g-2 py-0 py-sm-5 row-cols-1 row-cols-lg-3">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                             <i class="fas fa-cloud"></i>
